--- a/sns/youtube.html
+++ b/sns/youtube.html
@@ -41,199 +41,197 @@
                 </div>
             </div>
         </div>
-        <div class="bodyer">
-            <div class="guide">
-                <div class="renderer">
-                    <a href="#" class="guide-main">
-                        <i class="fa-solid fa-house"></i> 홈
+        <div class="guide">
+            <div class="renderer">
+                <a href="#" class="guide-main">
+                    <i class="fa-solid fa-house" style="padding-top: 0px;"></i> 홈
+                </a>
+                <a href="#">
+                    <i class="fa-regular fa-compass"></i> 탐색
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-youtube"></i> Shorts
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-clapperboard"></i> 구독
+                </a>
+                <a></a>
+                <a href="#">
+                    <i class="fa-solid fa-photo-film"></i> 보관함
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-clock-rotate-left"></i> 시청 기록
+                </a>
+                <a href="#">
+                    <i class="fa fa-light fa-square-caret-right"></i> 내 동영상
+                </a>
+                <a href="#">
+                    <i class="fa fa-light fa-clock"></i> 시청 기록
+                </a>
+                <a href="#">
+                    <i class="fa fa-light fa-scissors"></i> 내 클립
+                </a>
+                <div class="hide-guide">
+                    <a href="#">
+                        <i class="fa fa-thin fa-thumbs-up"></i> 좋아요 표시한 동영상
                     </a>
                     <a href="#">
-                        <i class="fa-regular fa-compass"></i> 탐색
+                        <i class="fa fa-light fa-list"></i> 재생목록1
                     </a>
                     <a href="#">
-                        <i class="fa-brands fa-youtube"></i> Shorts
+                            <i class="fa fa-light fa-list"></i> 재생목록2
                     </a>
                     <a href="#">
-                        <i class="fa-solid fa-clapperboard"></i> 구독
+                        <i class="fa fa-light fa-list"></i> 재생목록3
                     </a>
-                    <a></a>
-                    <a href="#">
-                        <i class="fa-solid fa-photo-film"></i> 보관함
+                    <a href="#" class="item">
+                        <i class="fa fa-light fa-angle-down"></i> <span>더보기</span>
                     </a>
-                    <a href="#">
-                        <i class="fa-solid fa-clock-rotate-left"></i> 시청 기록
-                    </a>
-                    <a href="#">
-                        <i class="fa fa-light fa-square-caret-right"></i> 내 동영상
-                    </a>
-                    <a href="#">
-                        <i class="fa fa-light fa-clock"></i> 시청 기록
-                    </a>
-                    <a href="#">
-                        <i class="fa fa-light fa-scissors"></i> 내 클립
-                    </a>
-                    <div class="hide-guide">
-                        <a href="#">
-                            <i class="fa fa-thin fa-thumbs-up"></i> 좋아요 표시한 동영상
-                        </a>
-                        <a href="#">
-                            <i class="fa fa-light fa-list"></i> 재생목록1
-                        </a>
-                        <a href="#">
-                                <i class="fa fa-light fa-list"></i> 재생목록2
-                        </a>
-                        <a href="#">
-                            <i class="fa fa-light fa-list"></i> 재생목록3
-                        </a>
-                        <a href="#" class="item">
-                            <i class="fa fa-light fa-angle-down"></i> <span>더보기</span>
-                        </a>
+                </div>
+            </div>
+            <div class="subscribe">
+                <span style="font-size:14; color: #606060">
+                    구독
+                </span>
+                <a href="#">
+                    <img src="..\img\css.png"> <span>CSS</span>
+                </a>
+                <a href="#">
+                    <img src="..\img\c.png"> <span>그저 C</span>
+                </a>
+                <a href="#">
+                    <img src="..\img\java.png"> <span>자바</span>
+                </a>
+                <a href="#">
+                    <img src="..\img\python.png"> <span>파이썬</span>
+                </a>
+                <a href="#">
+                    <img src="..\img\typescript.png"> <span>타입스크립트</span>
+                </a>
+                <a href="#">
+                    <img src="..\img\javascript.png"> <span>자바스크립트</span>
+                </a>
+                <a href="#">
+                    <img src="..\img\html.png"> <span>HTML</span>
+                </a>
+                <a href="#">
+                    <i class="fa fa-light fa-angle-down" style="margin:0 24 0 6"></i> 123개 더보기
+                </a>
+            </div>
+        </div>
+        <div class="category">
+            <a></a>
+            <a href="#" class="category-button-main">전체</a>
+            <a href="#" class="category-button">실시간</a>
+            <a href="#" class="category-button">게임</a>
+            <a href="#" class="category-button">음악</a>
+            <a href="#" class="category-button">믹스</a>
+            <a href="#" class="category-button">스포츠</a>
+            <a href="#" class="category-button">수학</a>
+            <a href="#" class="category-button">뉴스</a>
+            <a href="#" class="category-button">액션 어드벤처 게임</a>
+            <a href="#" class="category-button">요리</a>
+            <a href="#" class="category-button">애니메이션</a>
+            <a href="#" class="category-button">반려동물</a>
+            <a></a>
+        </div>
+        <div class="video-section">
+            <a href="#">
+                <div class="video">
+                    <img class="thumbnail" src="..\img\thumbnail.png">
+                    <div class="lore">
+                        <img class="channel" src="..\img\channel.jpg">
+                        <div class="video-lore-text">
+                            <span class="title">Youbute video!!!</span>
+                            <div>
+                                유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
+                                <br>
+                                조회수 10만회 ⦁ 1시간 전
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="subscribe">
-                    <span style="font-size:14; color: #606060">
-                        구독
-                    </span>
-                    <a href="#">
-                        <img src="..\img\css.png"> <span>CSS</span>
-                    </a>
-                    <a href="#">
-                        <img src="..\img\c.png"> <span>그저 C</span>
-                    </a>
-                    <a href="#">
-                        <img src="..\img\java.png"> <span>자바</span>
-                    </a>
-                    <a href="#">
-                        <img src="..\img\python.png"> <span>파이썬</span>
-                    </a>
-                    <a href="#">
-                        <img src="..\img\typescript.png"> <span>타입스크립트</span>
-                    </a>
-                    <a href="#">
-                        <img src="..\img\javascript.png"> <span>자바스크립트</span>
-                    </a>
-                    <a href="#">
-                        <img src="..\img\html.png"> <span>!프로그래밍언어</span>
-                    </a>
-                    <a href="#">
-                        <i class="fa fa-light fa-angle-down" style="margin:0 24 0 6"></i> 123개 더보기
-                    </a>
+            </a>
+            <a href="#">
+                <div class="video">
+                    <img class="thumbnail" src="..\img\thumbnail.png">
+                    <div class="lore">
+                        <img class="channel" src="..\img\channel.jpg">
+                        <div class="video-lore-text">
+                            <span class="title">Youbute video!!!</span>
+                            <div>
+                                유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
+                                <br>
+                                조회수 10만회 ⦁ 1시간 전
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="video-field">
-                <div class="category">
-                    <a href="#" class="category-button-main">전체</a>
-                    <a href="#" class="category-button">실시간</a>
-                    <a href="#" class="category-button">게임</a>
-                    <a href="#" class="category-button">음악</a>
-                    <a href="#" class="category-button">믹스</a>
-                    <a href="#" class="category-button">스포츠</a>
-                    <a href="#" class="category-button">수학</a>
-                    <a href="#" class="category-button">뉴스</a>
-                    <a href="#" class="category-button">액션 어드벤처 게임</a>
-                    <a href="#" class="category-button">요리</a>
-                    <a href="#" class="category-button">애니메이션</a>
-                    <a href="#" class="category-button">반려동물</a>
+            </a>
+            <a href="#">
+                <div class="video">
+                    <img class="thumbnail" src="..\img\thumbnail.png">
+                    <div class="lore">
+                        <img class="channel" src="..\img\channel.jpg">
+                        <div class="video-lore-text">
+                            <span class="title">Youbute video!!!</span>
+                            <div>
+                                유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
+                                <br>
+                                조회수 10만회 ⦁ 1시간 전
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="video-section">
-                    <a href="#">
-                        <div class="video">
-                            <img class="thumbnail" src="..\img\thumbnail.png">
-                            <div class="lore">
-                                <img class="channel" src="..\img\channel.jpg">
-                                <div class="video-lore-text">
-                                    <span class="title">Youbute video!!!</span>
-                                    <div>
-                                        유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
-                                        <br>
-                                        조회수 10만회 ⦁ 1시간 전
-                                    </div>
-                                </div>
+            </a>
+            <a href="#">
+                <div class="video">
+                    <img class="thumbnail" src="..\img\thumbnail.png">
+                    <div class="lore">
+                        <img class="channel" src="..\img\channel.jpg">
+                        <div class="video-lore-text">
+                            <span class="title">Youbute video!!!</span>
+                            <div>
+                                유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
+                                <br>
+                                조회수 10만회 ⦁ 1시간 전
                             </div>
                         </div>
-                    </a>
-                    <a href="#">
-                        <div class="video">
-                            <img class="thumbnail" src="..\img\thumbnail.png">
-                            <div class="lore">
-                                <img class="channel" src="..\img\channel.jpg">
-                                <div class="video-lore-text">
-                                    <span class="title">Youbute video!!!</span>
-                                    <div>
-                                        유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
-                                        <br>
-                                        조회수 10만회 ⦁ 1시간 전
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="video">
-                            <img class="thumbnail" src="..\img\thumbnail.png">
-                            <div class="lore">
-                                <img class="channel" src="..\img\channel.jpg">
-                                <div class="video-lore-text">
-                                    <span class="title">Youbute video!!!</span>
-                                    <div>
-                                        유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
-                                        <br>
-                                        조회수 10만회 ⦁ 1시간 전
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="video">
-                            <img class="thumbnail" src="..\img\thumbnail.png">
-                            <div class="lore">
-                                <img class="channel" src="..\img\channel.jpg">
-                                <div class="video-lore-text">
-                                    <span class="title">Youbute video!!!</span>
-                                    <div>
-                                        유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
-                                        <br>
-                                        조회수 10만회 ⦁ 1시간 전
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="video">
-                            <img class="thumbnail" src="..\img\thumbnail.png">
-                            <div class="lore">
-                                <img class="channel" src="..\img\channel.jpg">
-                                <div class="video-lore-text">
-                                    <span class="title">Youbute video!!!</span>
-                                    <div>
-                                        유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
-                                        <br>
-                                        조회수 10만회 ⦁ 1시간 전
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="video">
-                            <img class="thumbnail" src="..\img\thumbnail.png">
-                            <div class="lore">
-                                <img class="channel" src="..\img\channel.jpg">
-                                <div class="video-lore-text">
-                                    <span class="title">Youbute video!!!</span>
-                                    <div>
-                                        유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
-                                        <br>
-                                        조회수 10만회 ⦁ 1시간 전
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
+                    </div>
                 </div>
-            </div>
+            </a>
+            <a href="#">
+                <div class="video">
+                    <img class="thumbnail" src="..\img\thumbnail.png">
+                    <div class="lore">
+                        <img class="channel" src="..\img\channel.jpg">
+                        <div class="video-lore-text">
+                            <span class="title">Youbute video!!!</span>
+                            <div>
+                                유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
+                                <br>
+                                조회수 10만회 ⦁ 1시간 전
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="video">
+                    <img class="thumbnail" src="..\img\thumbnail.png">
+                    <div class="lore">
+                        <img class="channel" src="..\img\channel.jpg">
+                        <div class="video-lore-text">
+                            <span class="title">Youbute video!!!</span>
+                            <div>
+                                유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
+                                <br>
+                                조회수 10만회 ⦁ 1시간 전
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </a>
         </div>
         <script src="script.js"></script>
     </body>
