--- a/sns/youtube.html
+++ b/sns/youtube.html
@@ -118,6 +118,40 @@
                     <i class="fa fa-light fa-angle-down" style="margin:0 24 0 6"></i> 123개 더보기
                 </a>
             </div>
+            <div class="youtube-more">
+                <span>YOUTUBE 더보기</span>
+                <a href="#">
+                    <i class="fa-brands fa-youtube"></i> YouTube Premium
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-film"></i> 영화
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-gamepad"></i> 게임
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-tower-broadcast"></i> 실시간
+                </a>
+                <a href="#">
+                    <i class="fa-regular fa-lightbulb"></i> 학습
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-trophy"></i> 스포츠
+                </a>
+                <a></a>
+                <a href="#">
+                    <i class="fa-solid fa-gear"></i> 설정
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-flag"></i> 신고 기록
+                </a>
+                <a href="#">
+                    <i class="fa-regular fa-circle-question"></i> 고객센터
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-circle-exclamation"></i> 의견 보내기
+                </a>
+            </div>
         </div>
         <div class="category">
             <a></a>
