--- a/sns/youtube.html
+++ b/sns/youtube.html
@@ -44,7 +44,7 @@
         <div class="guide">
             <div class="renderer">
                 <a href="#" class="guide-main">
-                    <i class="fa-solid fa-house" style="padding-top: 0px;"></i> 홈
+                    <i class="fa-solid fa-house"></i> 홈
                 </a>
                 <a href="#">
                     <i class="fa-regular fa-compass"></i> 탐색
@@ -59,16 +59,16 @@
                 <a href="#">
                     <i class="fa-solid fa-photo-film"></i> 보관함
                 </a>
-                <a href="#">
+                <a href="#" class="shorts-guide-hide">
                     <i class="fa-solid fa-clock-rotate-left"></i> 시청 기록
                 </a>
-                <a href="#">
+                <a href="#" class="shorts-guide-hide">
                     <i class="fa fa-light fa-square-caret-right"></i> 내 동영상
                 </a>
-                <a href="#">
+                <a href="#" class="shorts-guide-hide">
                     <i class="fa fa-light fa-clock"></i> 시청 기록
                 </a>
-                <a href="#">
+                <a href="#" class="shorts-guide-hide">
                     <i class="fa fa-light fa-scissors"></i> 내 클립
                 </a>
                 <div class="hide-guide">
@@ -168,6 +168,67 @@
             <a href="#" class="category-button">애니메이션</a>
             <a href="#" class="category-button">반려동물</a>
             <a></a>
+        </div>
+        <div class="account-menu" style="display: none">
+            <div class="account-menu-profile">
+                <img src="..\img\profile.png" class="profile" style="width: 40;">
+                <div class="account-menu-text">
+                    <span class="account-name">유튜브 계정</span>
+                    <a href="#" class="account-control">
+                        Google 계정 관리
+                    </a>
+                </div>
+            </div>
+            <div class="account-menu-setting">
+                <div class="account-menu-channel">
+                    <a href="#">
+                        <i class="fa-solid fa-user"></i> 내 채널
+                    </a>
+                    <a href="#">
+                        <i class="fa-solid fa-dollar-sign"></i> 구매 항목 및 멤버십
+                    </a>
+                    <a href="#">
+                        <i class="fa-solid fa-gear"></i> YouTube스튜디오
+                    </a>
+                    <a href="#">
+                        <i class="fa-regular fa-address-card"></i> 계정 전환 <i class="fa fa-light fa-angle-right" id="right-angle"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-solid fa-arrow-right-from-bracket"></i> 로그아웃
+                    </a>
+                </div>
+                <div class="account-menu-other">
+                    <a href="#">
+                        <i class="fa-regular fa-moon"></i> 디자인: 기기 테마 <i class="fa fa-light fa-angle-right" id="right-angle"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-solid fa-language"></i> 언어: 한국어 <i class="fa fa-light fa-angle-right" id="right-angle"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-solid fa-globe"></i> 위치: 한국 <i class="fa fa-light fa-angle-right" id="right-angle"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-solid fa-gear"></i> 설정
+                    </a>
+                    <a href="#">
+                        <i class="fa-solid fa-shield-halved"></i> YouTube의 내 데이터
+                    </a>
+                    <a href="#">
+                        <i class="fa-regular fa-circle-question"></i> 고객센터
+                    </a>
+                    <a href="#">
+                        <i class="fa-solid fa-circle-exclamation"></i>  의견 보내기
+                    </a>
+                    <a href="#">
+                        <i class="fa-regular fa-keyboard"></i>단축키
+                    </a>
+                </div>
+                <div class="account-menu-limited-mod">
+                    <a href="#">
+                        제한 모드: 사용 안함 <i class="fa fa-light fa-angle-right" id="right-angle"></i>
+                    </a>
+                </div>
+            </div>
         </div>
         <div class="video-section">
             <a href="#">
