--- a/sns/youtube.html
+++ b/sns/youtube.html
@@ -43,48 +43,48 @@
         </div>
         <div class="guide">
             <div class="renderer">
-                <a href="#" class="guide-main">
+                <a title="홈" href="#" class="guide-main">
                     <i class="fa-solid fa-house"></i> 홈
                 </a>
-                <a href="#">
+                <a title="탐색" href="#">
                     <i class="fa-regular fa-compass"></i> 탐색
                 </a>
-                <a href="#">
+                <a title="Shorts" href="#">
                     <i class="fa-brands fa-youtube"></i> Shorts
                 </a>
-                <a href="#">
+                <a title="구독" href="#">
                     <i class="fa-solid fa-clapperboard"></i> 구독
                 </a>
                 <a></a>
-                <a href="#">
+                <a title="보관함" href="#">
                     <i class="fa-solid fa-photo-film"></i> 보관함
                 </a>
-                <a href="#" class="shorts-guide-hide">
+                <a title="시청 기록" href="#" class="shorts-guide-hide">
                     <i class="fa-solid fa-clock-rotate-left"></i> 시청 기록
                 </a>
-                <a href="#" class="shorts-guide-hide">
+                <a title="내 동영상" href="#" class="shorts-guide-hide">
                     <i class="fa fa-light fa-square-caret-right"></i> 내 동영상
                 </a>
-                <a href="#" class="shorts-guide-hide">
+                <a title="시청 기록" href="#" class="shorts-guide-hide">
                     <i class="fa fa-light fa-clock"></i> 시청 기록
                 </a>
-                <a href="#" class="shorts-guide-hide">
+                <a title="내 클립" href="#" class="shorts-guide-hide">
                     <i class="fa fa-light fa-scissors"></i> 내 클립
                 </a>
                 <div class="hide-guide">
-                    <a href="#">
+                    <a title="좋아요 표시한 동영상" href="#">
                         <i class="fa fa-thin fa-thumbs-up"></i> 좋아요 표시한 동영상
                     </a>
-                    <a href="#">
+                    <a title="재생목록1" href="#">
                         <i class="fa fa-light fa-list"></i> 재생목록1
                     </a>
-                    <a href="#">
+                    <a title="재생목록2" href="#">
                             <i class="fa fa-light fa-list"></i> 재생목록2
                     </a>
-                    <a href="#">
+                    <a title="재생목록3" href="#">
                         <i class="fa fa-light fa-list"></i> 재생목록3
                     </a>
-                    <a href="#" class="item">
+                    <a title="더보기" href="#" class="item">
                         <i class="fa fa-light fa-angle-down"></i> <span>더보기</span>
                     </a>
                 </div>
