--- a/sns/youtube.html
+++ b/sns/youtube.html
@@ -21,7 +21,7 @@
                     <a href="#"></a>
                         <i id="magnifying" class="fa fa-thin fa-magnifying-glass"></i>
                     </a>
-                    <a href="#" style="font-size: 24px;" >
+                    <a class="microphone" href="#" style="font-size: 24px;">
                         <i class="fa-solid fa-microphone"></i>
                     </a>
                 </div>
@@ -237,7 +237,7 @@
                     <div class="lore">
                         <img class="channel" src="..\img\channel.jpg">
                         <div class="video-lore-text">
-                            <span class="title">Youbute video!!!</span>
+                            <span class="title">Youtube video!!!</span>
                             <div>
                                 유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
                                 <br>
@@ -253,7 +253,7 @@
                     <div class="lore">
                         <img class="channel" src="..\img\channel.jpg">
                         <div class="video-lore-text">
-                            <span class="title">Youbute video!!!</span>
+                            <span class="title">Youtube video!!!</span>
                             <div>
                                 유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
                                 <br>
@@ -269,7 +269,7 @@
                     <div class="lore">
                         <img class="channel" src="..\img\channel.jpg">
                         <div class="video-lore-text">
-                            <span class="title">Youbute video!!!</span>
+                            <span class="title">Youtube video!!!</span>
                             <div>
                                 유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
                                 <br>
@@ -285,7 +285,7 @@
                     <div class="lore">
                         <img class="channel" src="..\img\channel.jpg">
                         <div class="video-lore-text">
-                            <span class="title">Youbute video!!!</span>
+                            <span class="title">Youtube video!!!</span>
                             <div>
                                 유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
                                 <br>
@@ -301,7 +301,7 @@
                     <div class="lore">
                         <img class="channel" src="..\img\channel.jpg">
                         <div class="video-lore-text">
-                            <span class="title">Youbute video!!!</span>
+                            <span class="title">Youtube video!!!</span>
                             <div>
                                 유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
                                 <br>
@@ -317,7 +317,7 @@
                     <div class="lore">
                         <img class="channel" src="..\img\channel.jpg">
                         <div class="video-lore-text">
-                            <span class="title">Youbute video!!!</span>
+                            <span class="title">Youtube video!!!</span>
                             <div>
                                 유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
                                 <br>
